--- a/_posts/2023-12-26-clangd.md
+++ b/_posts/2023-12-26-clangd.md
@@ -7,8 +7,8 @@ tags: clangd
 ### 1. 什么是clangd
 clangd是llvm项目推出的C++语言服务器，通过LSP(Language Server Protocal)协议向编辑器如vscode/vim/emacs提供语法补全、错误检测、跳转、格式化等等功能。
 
-### 2. clangd extension
-clangd extension 是vscode的一个插件
+### 2. vscode-clangd extension
+vscode-clangd extension 是vscode的一个插件
 
 ### 3. 编译clangd
 ```shell
@@ -110,9 +110,7 @@ class HLSASTFeature implements vscodelc.StaticFeature {
   ) {
     try {
        const cmd = vscode.commands.registerCommand("clangd.hlsAst", async () => {
-        vscode.window.showInformationMessage(
-          "vscode: test_clangd_simplified_ast"
-        );
+        vscode.window.showInformationMessage("vscode: test_clangd_simplified_ast");
 
         const editor = vscode.window.activeTextEditor;
         if (!editor) {
@@ -127,12 +125,11 @@ class HLSASTFeature implements vscodelc.StaticFeature {
         if (!item) {
           vscode.window.showInformationMessage("vscode: no astnode found");
         } else {
-          vscode.window.showInformationMessage(
-            "vscode simplified_ast: " + item.kind
-          );
+          vscode.window.showInformationMessage("vscode simplified_ast: " + item.kind);
         }
         return item;
       });
+      
       const cmd1 = vscode.commands.registerCommand("clangd.simplifiedAst", async (filePath: string) => {
         const doc = await vscode.workspace.openTextDocument(filePath);
         const converter = this.client.code2ProtocolConverter;
