--- a/_posts/2023-12-26-clangd.md
+++ b/_posts/2023-12-26-clangd.md
@@ -1,7 +1,7 @@
 ---
 title: Clangd的使用
 key: 2023-12-26
-tags: clangd
+tags: clang
 ---
 
 ### 1. 什么是clangd
@@ -129,7 +129,7 @@ class HLSASTFeature implements vscodelc.StaticFeature {
         }
         return item;
       });
-      
+
       const cmd1 = vscode.commands.registerCommand("clangd.simplifiedAst", async (filePath: string) => {
         const doc = await vscode.workspace.openTextDocument(filePath);
         const converter = this.client.code2ProtocolConverter;
